2007-03-04  Junichi Uekawa  <dancer@debian.org>

	* cow-shell.c (main): remove use of /usr/lib and use value of
	LIBDIR

	* cowdancer.spec: create specfile

	* Makefile (install): fix makefile

2006-12-31  Junichi Uekawa  <dancer@debian.org>

	* Makefile (%.o): do not use strict aliasing for compiling
	cow-shell.c

	* cow-shell.c (ilistcreate): add debug hook.

	* tests/020_test_lchown.sh: add new test.

	* cow-shell.c (ilistcreate): include symbollic links to the list.

	* cowdancer.c (check_inode_and_copy, and others): do not
	canonicalize file name for lchown case. Add a new flag and change
	every function to use it.

2006-12-21  Junichi Uekawa  <dancer@debian.org>

	* tests/900_test_pbuilder.sh: do not call pdebuild through sudo.

2006-10-29  Junichi Uekawa  <dancer@debian.org>

	* tests/902_test_cowbuilder_fail.sh: use workaround hooks.

	* tests/901_test_pbuilder_create.sh: use workaround hooks.

	* tests/900_test_pbuilder.sh: use workaround hooks.

2006-08-31  Junichi Uekawa  <dancer@debian.org>

	* cowbuilder.c (cpbuilder_update): fix to use command-line options.

2006-08-26  Junichi Uekawa  <dancer@debian.org>

	* cowdancer.c: copyright update

	* debian/README.Debian: update

	* cowbuilder.8: add see-also.

	* cowbuilder.c (cpbuilder_help): add comment of other pbuilder options.

	* cowbuilder.8: fix up documentation to explain other options are
	passed through.

	* cowbuilder.c (main): fix up parameter handling

2006-08-20  Junichi Uekawa  <dancer@debian.org>

	* cowbuilder.c (cpbuilder_build, cpbuilder_login)
	(cpbuilder_execute, cpbuilder_update): abort and do not clean up
	if return code is wrong.

2006-07-26  Junichi Uekawa  <dancer@debian.org>

	* cowbuilder.c (cpbuilder_update): do not remove base.cow if
	update failed.

2006-06-24  Junichi Uekawa  <dancer@debian.org>

	* cowbuilder.c (main): s/basepath/buildplace/ for -B.

2006-06-21  Junichi Uekawa  <dancer@debian.org>

	* cowbuilder.c (cpbuilder_build): support COWDANCER_REUSE option