@@ -1,8 +1,9 @@
 cowdancer (0.26) UNRELEASED; urgency=low
 
   * spec file, port to rpm-based systems.
+  * add test for close(0);open() not returning 0 for fd.
 
- -- Junichi Uekawa <dancer@debian.org>  Thu,  4 Jan 2007 15:12:40 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Thu,  8 Mar 2007 07:46:31 +0900
 
 cowdancer (0.25) unstable; urgency=low
 
